--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 services:
   mysql:
-    image: mysql:8.0
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: kitra_mysql
     restart: always
     environment:
@@ -11,5 +13,3 @@ services:
       MYSQL_PASSWORD: kitra_password
     ports:
       - "3306:3306"
-    volumes:
-      - ./initdb.sql:/docker-entrypoint-initdb.d/init.sql
